--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <link rel="stylesheet" href="index.css">
 <script src="https://d3js.org/d3.v4.min.js"></script>
 <script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
-<script src="https://apps.bdimg.com/libs/hammer.js/1.0.10/hammer.min.js"></script>
+<script src="hammer.min.js"></script>
 
 
 <script>
