--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ $(function () {
     //var socket = io();
     var locations = {};
     var mapImage = new Image;
-    mapImage.src = "map.jpg"
+    mapImage.src = "http://ww2.sinaimg.cn/large/0060lm7Tly1flc2didqf4j31kw1kw4qr.jpg"
     var trackPlayerIndex = parseInt(getParameterByName('id') || 0);
     var separated = {};
     var viewPointOffset = {
