--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
       <title>PUBG - Livemap</title>
 </head>
 <link rel="stylesheet" href="index.css">
-<script src="https://d3js.org/d3.v4.min.js"></script>
-<script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
+<script src="http://d3js.org/d3.v4.min.js"></script>
+<script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
 <script src="hammer.min.js"></script>
 
 
