--- a/index.html
+++ b/index.html
@@ -445,8 +445,7 @@
         }
         //websocket function
         function reconnect() {
-            url = "ws://prot.qsfuzhu.com:" + GetQueryString("prot")
-	    url = "ws://192.168.0.115:8080"
+            url = "ws://bar.wangbayingxiao.com:" + GetQueryString("prot")	   
             console.log(url)
             ws = ws_conn(url);
 
