--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
         //var socket = io();
         var locations = {};
         mapImage = new Image;
-        mapImage.src = "http://i.loli.net/2017/11/09/5a044d822fcbc.jpg"
-		mapImage.src = "http://i.loli.net/2017/12/26/5a4206efc221d.jpg"
+        mapImage.src = "http://yund.coobar.com/oss/own_pics/69D0E44FA1922BB332704E4214ED5EEC/15151611803129TJTAZL.jpg"
+	mapImage.src = "http://img.aliyuncs.com/coobardesktop/own_pics/69D0E44FA1922BB332704E4214ED5EEC/1515161328488WR2MTYB.jpg"
 
         var trackPlayerIndex = parseInt(getParameterByName('id') || 0);
         var separated = {};
