--- a/index.html
+++ b/index.html
@@ -504,10 +504,9 @@
         }
     });
 	hst=1
-	function ht(){
-		
-		if(hst==1){mapImage.src="http://i.loli.net/2017/12/26/5a4206efc221d.jpg";hst=2;return}
-		if(hst==2){mapImage.src="http://i.loli.net/2017/11/09/5a044d822fcbc.jpg";hst=1;return}
+	function ht(){ 
+		if(hst==1){mapImage.src="http://yund.coobar.com/oss/own_pics/69D0E44FA1922BB332704E4214ED5EEC/15151611803129TJTAZL.jpg";hst=2;return}
+		if(hst==2){mapImage.src="http://img.aliyuncs.com/coobardesktop/own_pics/69D0E44FA1922BB332704E4214ED5EEC/1515161328488WR2MTYB.jpg";hst=1;return}
 	}
 </script>
 
